--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -19,3 +19,13 @@ position: relative;
 width: 100%;
 height: 100%;
 }
+
+#divBuscador .buscar{
+background-image: url("../img/lupa.jpg");
+background-position: left center;
+background-repeat: no-repeat;
+border-radius: 10px;
+height: 35px;
+padding-left: 81px;
+width: 250px;
+}
