--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -1,8 +1,8 @@
-﻿body
+﻿/*body
 {
     background-image: url("../img/fondo.png");
 }
-
+*/
 #divHome
 {
     margin: auto;
@@ -75,12 +75,12 @@ float: right;
 
 #divLogin ul li
 {
-background-color: #22b573;
+/*background-color: #22b573;*/
     border-radius: 5px;
     color: white;
 }
 
-#divLogin ul li h1
+#divLogin  ul li h1
 {
 border-bottom: 0 none;
     color: white;
@@ -89,8 +89,8 @@ border-bottom: 0 none;
     padding: 4px 5px;
     text-align: center;
     width: 70px;
+ 
 }
-
 
 
 
@@ -304,9 +304,29 @@ float: right;
 
 }
 
+@media (min-width: 768px) {
+   #mdAnA{
+    width: 600px;
+    margin: 30px auto;
+  }
 
+.modal.fade  #mdAnA
+{
+    width:60%;
+  -webkit-transition: -webkit-transform .3s ease-out;
+       -o-transition:      -o-transform .3s ease-out;
+          transition:         transform .3s ease-out;
+  -webkit-transform: translate3d(0, -25%, 0);
+       -o-transform: translate3d(0, -25%, 0);
+          transform: translate3d(0, -25%, 0);
+}
+.modal.in #mdAnA{
+  -webkit-transform: translate3d(0, 0, 0);
+       -o-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+}
 
-
-
-
-
+input:focus::-webkit-input-placeholder { color:transparent; }
+input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
+input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
+input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
