--- a/CuandoTocan/CuandoTocan/css/bootstrap/bootstrap.css
+++ b/CuandoTocan/CuandoTocan/css/bootstrap/bootstrap.css
@@ -2354,9 +2354,11 @@ output {
   line-height: 1.42857143;
   color: #555;
 }
-.form-control {
+.form-control 
+{
+   
   display: block;
-  width: 100%;
+  width: 90%;
   height: 34px;
   padding: 6px 12px;
   font-size: 14px;
@@ -2707,7 +2709,7 @@ select[multiple].input-lg {
   .form-horizontal .control-label {
     padding-top: 7px;
     margin-bottom: 0;
-    text-align: right;
+
   }
 }
 .form-horizontal .has-feedback .form-control-feedback {
@@ -2717,6 +2719,8 @@ select[multiple].input-lg {
 @media (min-width: 768px) {
   .form-horizontal .form-group-lg .control-label {
     padding-top: 14.3px;
+    text-align:right;
+    margin-right:2px;
   }
 }
 @media (min-width: 768px) {
@@ -3020,7 +3024,7 @@ fieldset[disabled] .btn-danger.active {
 }
 .btn-link {
   font-weight: normal;
-  color: #428bca;
+ /* color: #428bca;*/
   cursor: pointer;
   border-radius: 0;
 }
@@ -3037,11 +3041,12 @@ fieldset[disabled] .btn-link {
 .btn-link:focus,
 .btn-link:active {
   border-color: transparent;
+
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #2a6496;
-  text-decoration: underline;
+   color:#22b573;
+  /*text-decoration: underline;*/
   background-color: transparent;
 }
 .btn-link[disabled]:hover,
@@ -5391,7 +5396,9 @@ button.close {
   -webkit-overflow-scrolling: touch;
   outline: 0;
 }
-.modal.fade .modal-dialog {
+.modal.fade .modal-dialog 
+{
+    width:30%;
   -webkit-transition: -webkit-transform .3s ease-out;
        -o-transition:      -o-transform .3s ease-out;
           transition:         transform .3s ease-out;
@@ -5453,10 +5460,13 @@ button.close {
 .modal-title {
   margin: 0;
   line-height: 1.42857143;
+  color:#22b573;
 }
 .modal-body {
   position: relative;
   padding: 15px;
+  color:#64cb9d;
+  text-align: center;
 }
 .modal-footer {
   padding: 15px;
@@ -5779,22 +5789,14 @@ button.close {
   opacity: .5;
 }
 .carousel-control.left {
-  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
-  background-image:      -o-linear-gradient(left, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, .5)), to(rgba(0, 0, 0, .0001)));
-  background-image:         linear-gradient(to right, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
   background-repeat: repeat-x;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, .5) 0%, rgba(0, 0, 0, .0001) 100%);
 }
 .carousel-control.right {
   right: 0;
   left: auto;
-  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
-  background-image:      -o-linear-gradient(left, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, .0001)), to(rgba(0, 0, 0, .5)));
-  background-image:         linear-gradient(to right, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
-  background-repeat: repeat-x;
+    background-repeat: repeat-x;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, .0001) 0%, rgba(0, 0, 0, .5) 100%);
 }
 .carousel-control:hover,
 .carousel-control:focus {
