--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -1,14 +1,13 @@
-﻿/*body
+﻿body
 {
     background-image: url("../img/fondo.png");
 }
-*/
+
 #divHome
 {
     margin: auto;
     width: 1024px;
 }
-
 
 #divBuscador input
 {
@@ -32,8 +31,10 @@ width: 100%;
 #divLogo
 {
 float: left;
-margin: 10px;
-overflow: hidden;
+    margin-bottom: 10px;
+    margin-left: 25px;
+    margin-top: 10px;
+    overflow: hidden;
 }
 
 #divLogo img
@@ -53,19 +54,11 @@ overflow: hidden;
 #divLogin 
 {
 float: right;
-    margin-right: -342px;
-    margin-top: 48px;
+    margin-right: -350px;
+    margin-top: 39px;
     overflow: hidden;
 }
-
-#divLogin
-{
-float: right;
-    margin-right: -362px;
-    margin-top: 24px;
-    overflow: hidden;
-}
-    
+   
 #divLogin ul
 {
     cursor: pointer;
@@ -75,7 +68,7 @@ float: right;
 
 #divLogin ul li
 {
-/*background-color: #22b573;*/
+  /*background-color: #22b573;*/
     border-radius: 5px;
     color: white;
 }
@@ -171,14 +164,14 @@ float: right;
     margin-top: 20px;
 }
 
-#lblProxEventos
+#ContentHomeCenterMed_lblProxEventos
 {
 border-bottom: medium solid #22b573;
 padding-bottom: 0px;
 font-size: 19px;
 }
 
-#lblArtDestacados
+#ContentHomeCenterMed_lblArtDestacados
 {
 border-bottom: medium solid #22b573;
 padding-bottom: 0px;
@@ -192,24 +185,36 @@ font-size: 19px;
 #divGallery
 {
 float: left;
-overflow: hidden;
-width: 720px;
+    overflow: hidden;
+    width: 750px;
 }
 
 #divGallery .col-lg-3 {
-    width: 240px;
+    width: 247px;
 }
 
 #divGallery .thumbnail {
-    background-color: #fff;
+  background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 4px;
     display: block;
-    margin-bottom: 10px;
-    margin-right: 10px;
+    margin-bottom: 5px;
+    margin-right: 5px;
     padding: 3px;
     transition: all 0.2s ease-in-out 0s;
 }
+
+#divGallery img {
+    display: block;
+    height: 176px;
+    max-width: 100%;
+    width: 231px;
+}
+
+
+
+
+
 
 #divGallery .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 
 {
@@ -229,6 +234,7 @@ width: 720px;
 #divDescatados
 {
 float: right;
+    margin-top: 1px;
     overflow: hidden;
     width: 260px;
 }
@@ -250,7 +256,7 @@ float: right;
     margin: 22px 0 0;
     padding-left: 15px;
     padding-right: 0;
-    width: 150px;
+    width: 180px;
 }
 
 #divDescatados .col-md-7 img
@@ -275,7 +281,7 @@ float: right;
 
 #divDescatados .col-md-5 .h4 
 {
-    font-size: 18px;
+    font-size: 17px;
     color: inherit;
     font-family: inherit;
     font-weight: 500;
