--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -6,19 +6,12 @@
 #divHome
 {
     margin: auto;
-    width: 1024px;
+    width: 100%;
 }
 
-#divBuscador input
+#divBuscador .col-lg-6
 {
-background-image: url("../img/lupa.jpg");
-background-position: 6px center;
-background-repeat: no-repeat;
-background-size: 23px auto;
-border-radius: 10px;
-height: 30px;
-padding-left: 37px;
-width: 250px;
+    width: 100%;
 }
 
 #divCabecera
@@ -31,31 +24,32 @@ width: 100%;
 #divLogo
 {
 float: left;
-    margin-bottom: 10px;
-    margin-left: 25px;
-    margin-top: 10px;
+    margin-bottom: -28px;
+    margin-left: 10%;
+    margin-top: -22px;
     overflow: hidden;
 }
 
 #divLogo img
 {
-height: 100px;
-width: 100px;
+height: 60%;
+    width: 85%;
 }
 
 #divBuscador
 {
-float: right;
-margin-right: 150px;
-margin-top: 40px;
-overflow: hidden;
+float: left;
+    margin-left: 30%;
+    margin-top: 3%;
+    overflow: hidden;
+    width: 25%;
 }
 
 #divLogin 
 {
-float: right;
-    margin-right: -350px;
-    margin-top: 39px;
+float: left;
+    margin-left: 1%;
+    margin-top: 3%;
     overflow: hidden;
 }
    
@@ -64,6 +58,8 @@ float: right;
     cursor: pointer;
     display: block;
     list-style: outside none none;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 #divLogin ul li
@@ -146,22 +142,24 @@ border-bottom: 0 none;
 
 #divCuerpo
 {
-width: 100%;
-overflow: hidden;
+margin: 0 auto;
+    overflow: hidden;
+    width: 80%;
+    /*background-color: red;*/
 }
 
 #divCuerpoTopIzq
 {
 float: left;
-    margin: 20px 0;
+    margin: 2% 0 1% 0;
 }
 
 #divCuerpoTopDer
 {
-float: right;
-    margin-bottom: 20px;
-    margin-right: 88px;
-    margin-top: 20px;
+  float: right;
+    margin-bottom: 1%;
+    margin-right: 9.5%;
+    margin-top: 2%;
 }
 
 #ContentHomeCenterMed_lblProxEventos
@@ -186,7 +184,7 @@ font-size: 19px;
 {
 float: left;
     overflow: hidden;
-    width: 750px;
+    width: 70%;
 }
 
 #divGallery .col-lg-3 {
@@ -211,12 +209,7 @@ float: left;
     width: 231px;
 }
 
-
-
-
-
-
-#divGallery .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 
+#divGallery .col-xs-1, #divGallery .col-lg-3 #divGallery .col-md-4 #divGallery .col-xs-6
 {
     min-height: 1px;
     padding-left: 0;
@@ -228,15 +221,12 @@ float: left;
 
 
 
-
-
-
 #divDescatados
 {
 float: right;
     margin-top: 1px;
     overflow: hidden;
-    width: 260px;
+    width: 25%;
 }
 
 #divDescatados .row {
@@ -301,13 +291,15 @@ float: right;
 
 #divFooter
 {
-    text-align: center;
     padding: 25px;
+    text-align: center;
+    width: 100%;
+    background-color: #333333;
 }
 
 #spanFooter
 {
-
+    color: White;
 }
 
 @media (min-width: 768px) {
