--- a/CuandoTocan/CuandoTocan/Home.Master
+++ b/CuandoTocan/CuandoTocan/Home.Master
@@ -101,7 +101,78 @@
                                                             <h4 class="modal-title" id="H1">Crear cuenta</h4>
                                                         </div>
                                                         <div class="modal-body">
-                                                            <div class="form-group">
+                                                            <div class="row">
+                                                                 <div class="col-sm-2">
+                                                                   <label for="imputUser">Usuario</label>
+                                                                 </div>
+                                                                 <div class="col-sm-4">
+                                                                   <asp:TextBox ID="imputUser" runat="server" placeholder="JuanPerez90" class="form-control"></asp:TextBox>
+                                                                 </div>
+                                                                 <div class="col-sm-2">
+                                                                    <label for="imputUser">E-Mail</label>
+                                                                 </div>
+                                                                  <div class="col-sm-4">
+                                                                    <asp:TextBox ID="TextBox1" runat="server" placeholder="JuanPerez90@gmail.com" class="form-control"></asp:TextBox>
+                                                                 </div>
+                                                             </div>
+                                                             <div class="row">
+                                                                <div class="col-sm-2">
+                                                                    <label for="inputPassword">Password</label>
+                                                                </div>
+                                                                <div class="col-sm-4">
+                                                                    <asp:TextBox ID="inputPassword" type="password" runat="server" placeholder="Password123" class="form-control"></asp:TextBox>
+                                                                </div>
+                                                                <div class="col-sm-2">
+                                                                    <label for="inputRePassword">Re-Password</label>
+                                                                </div>
+                                                                   <div class="col-sm-4">
+                                                                      <asp:TextBox ID="inputRePassword" type="password" runat="server" placeholder="Password123" class="form-control"></asp:TextBox>
+                                                                   </div>
+                                                             </div>
+                                                              <div class="row">
+                                                                <div class="col-sm-2">
+                                                                   <label for="ddlTiUsua">Tipo de Usuario</label>
+                                                                </div>
+                                                                <div class="col-sm-4">
+                                                                   <asp:DropDownList ID="ddlTiUsua" runat="server" class="form-control">   
+                                                                        <asp:ListItem Enabled="true" Text="Elija Tipo de usuario" Value="-1"></asp:ListItem>
+                                                                        <asp:ListItem Text="Usuario" Value="1"></asp:ListItem>
+                                                                        <asp:ListItem Text="Artista" Value="2"></asp:ListItem> 
+                                                                    </asp:DropDownList>
+                                                                </div>
+                                                                <div class="col-sm-2">
+                                                                    <label for="inputNombre">Nombre Completo</label>
+                                                                </div>
+                                                                   <div class="col-sm-4">
+                                                                      <asp:TextBox ID="inputNombre" type="text" runat="server" placeholder="Juan Perez" class="form-control"></asp:TextBox>
+                                                                   </div>
+                                                             </div>
+                                                             <div class="row">
+                                                                <div class="col-sm-2">
+                                                                    <label for="inputDireccion">Direccion:</label>
+                                                                </div>
+                                                                <div class="col-sm-4">
+                                                                  <asp:TextBox ID="inputDireccion" type="text" runat="server" placeholder="Av. Rivadavia 1234" class="form-control"></asp:TextBox>  
+                                                                </div>
+                                                                <div class="col-sm-2">
+                                                                    <label for="calendarFNac">Fecha de nacimiento:</label>
+                                                                </div>
+                                                                   <div class="col-sm-4">
+                                                                      <asp:TextBox ID="InputFNac" type="text" runat="server" placeholder="dd-mm-aaaa" class="form-control"/>
+                                                                   </div>
+                                                             </div>
+                                                             <div class="row">
+                                                                 <div class="col-sm-2">
+                                                                   <label for="TextAreaBio">Acerca de vos:</label>
+                                                                 </div>
+                                                                  <div class="col-sm-10">
+                                                                    <asp:TextBox id="TextAreaBio" TextMode="multiline" Columns="150" Rows="3" runat="server"  placeholder="Me gusta..." class="form-control" />
+                                                                  </div>
+                                                            </div>
+
+                                                         
+                                           <%--   comento formulario en solo una columna
+                                                         <div class="form-group">
                                                             <label for="imputUser" class="col-sm-2 control-label">Usuario</label>
                                                                 <div class="col-sm-10">
                                                                  <asp:TextBox ID="imputUser" runat="server" placeholder="JuanPerez90" class="form-control"></asp:TextBox>
@@ -152,7 +223,7 @@
                                                                 <div class="col-sm-10">
                                                                      <asp:TextBox id="TextAreaBio" TextMode="multiline" Columns="50" Rows="5" runat="server"  placeholder="Me gusta..." class="form-control" />
                                                                 </div>
-                                                            </div>
+                                                            </div>--%>
                                                         </div>
                                                         <div class="modal-footer">
                                                             <button type="button" class="btn btn-default" class="close" aria-label="Close">Crear</button>
