--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -1,6 +1,9 @@
 ﻿body
 {
     background-image: url("../img/fondo.png");
+  /*  background-image: url("../img/fondo2.png");
+    background-image: url("../img/fondo3.png");
+    background-image: url("../img/fondo4.png");*/
 }
 
 #divHome
@@ -310,7 +313,7 @@ float: right;
 
 .modal.fade  #mdAnA
 {
-    width:60%;
+    width:50%;
   -webkit-transition: -webkit-transform .3s ease-out;
        -o-transition:      -o-transform .3s ease-out;
           transition:         transform .3s ease-out;
