--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -363,3 +363,91 @@ input:focus::-webkit-input-placeholder { color:transparent; }
 input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
 input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
 input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
+
+
+
+/*   MApS */
+
+ #map {
+  position: relative;
+}
+
+#gmap {
+  height:450px;  
+}
+  /* evento*/
+
+
+#divPerfilEvento .module {
+    background: #ffffff none repeat scroll 0 0 padding-box;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
+    box-sizing: border-box;
+    float: right;
+    margin-top: -1.3%;
+    padding: 10px;
+    width: 70%;
+}
+
+#map_canvas
+{
+    
+  width: 100%; 
+  height: 300px;
+  margin-top:23%;
+    }
+    
+/*    #divIzquierdaE
+    {
+        width: 40%;
+        margin-top:10%;
+    }*/
+    
+   #divPerfilEvento{
+    margin: 0 auto;
+    overflow: hidden;
+    width: 80%;
+   }
+   
+    #divPerfilEvento .moduleE {
+    background: #ffffff none repeat scroll 0 0 padding-box;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
+    box-sizing: border-box;
+    float: right;
+    margin : -31% 0% 0% 0%;
+    padding: 10px;
+    width: 67%;
+}
+
+#divPerfilEvento .moduleE .title {
+    background: #22b573 none repeat scroll 0 0 padding-box;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    color: #fff !important;
+    margin: -10px -10px 10px;
+    padding: 10px;
+}
+
+#divPerfilEvento .moduleE .title a {
+    color: #fff;
+    text-decoration: none;
+}
+
+#divPerfilEvento .resume-body {
+    color: #000;
+    font-size: 13px;
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+
+#divIzquierda .col-md-3
+{
+    margin-top: 5px;
+    width: 29%;
+}
+
+#divIzquierda  .col-md-a
+{
+    width:37%;
+}
